# application/src/main/java/com/undina/application/controller/ApplicationController.java
@@ -5,10 +5,8 @@ import com.undina.application.util.ModelFormatter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.openapitools.api.ApplicationApi;
-import org.openapitools.model.CreditDTO;
 import org.openapitools.model.LoanApplicationRequestDTO;
 import org.openapitools.model.LoanOfferDTO;
-import org.openapitools.model.ScoringDataDTO;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -22,20 +20,20 @@ public class ApplicationController implements ApplicationApi {
 
     @Override
     public ResponseEntity<List<LoanOfferDTO>> getLoanOffers(LoanApplicationRequestDTO loanApplicationRequestDTO) {
-        log.info("getLoanOffers  {}", ModelFormatter.toLogFormat(loanApplicationRequestDTO));
+        log.info("getLoanOffers - start: {}", ModelFormatter.toLogFormat(loanApplicationRequestDTO));
         List<LoanOfferDTO> loanOfferDTOS = applicationService.getLoanOffers(loanApplicationRequestDTO);
-        log.info("getLoanOffers result: " + loanOfferDTOS);
+        log.info("getLoanOffers - result: {}", loanOfferDTOS);
         return ResponseEntity.ok()
                 .body(loanOfferDTOS);
     }
 
 
     @Override
-    public ResponseEntity<CreditDTO> getCalculation(ScoringDataDTO scoringDataDTO) {
-        log.info("getCalculation  {}", ModelFormatter.toLogFormat(scoringDataDTO));
-        CreditDTO creditDTO = applicationService.getCalculation(scoringDataDTO);
-        log.info("getCalculation result: " + creditDTO);
-        return ResponseEntity.ok()
-                .body(creditDTO);
+    public ResponseEntity<Void> getCalculation(LoanOfferDTO loanOfferDTO) {
+        log.info("getCalculation - start: {}", loanOfferDTO);
+        applicationService.getCalculation(loanOfferDTO);
+        log.info("getCalculation - result: ok");
+        return ResponseEntity.ok().build();
+
     }
 }
